# claude-notebook

./: .gitignore  LICENSE  README.md  README_KR.md  RESUME.md  pyproject.toml  requirements.txt
claude_notebook/: __init__.py  cli.py
jupyter_ext/: __init__.py  hosts.py  jsonio.py  ssh_fs.py  tmux_wrap.py
static/: app.js  index.html  keyboard-guard.js  style.css  terminal.css  terminal.html  terminal.js
static/core/: api.js
static/editor/: markdown.js  notion.js
static/legacy/: app.js  index.html  style.css  terminal.html
static/legacy/core/: api.js
static/legacy/editor/: auto-save.js  notion.js
static/legacy/ui/: finder.js  upload.js
static/legacy/views/: xlsx.js
static/main/: layout.js  main.css  persistence-ns.js  tab-store.js
static/ssh/: add-host-modal.js  ssh-chip.js
static/terminals/: open-terminal.js  term-instance.js  term-list.js  term-picker.js
static/ui/: finder.js  tree.js  upload.js
static/viewers/: file-instance.js
static/views/: csv.js  xlsx.js
