[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-notebook"
version = "0.1.0"
description = "Single-user web workspace for claude code — multi-host SSH, file viewer, drag-drop attach, persistent terminals"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Hoki Kim" },
    { name = "Woojin Lee" },
]
keywords = ["jupyter", "notebook", "claude", "ssh", "workspace", "extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "notebook>=6.5,<7",
    "tornado>=6.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage   = "https://github.com/wj926/claude-notebook"
Repository = "https://github.com/wj926/claude-notebook"
Issues     = "https://github.com/wj926/claude-notebook/issues"

[project.scripts]
claude-notebook = "claude_notebook.cli:main"

[tool.setuptools]
packages = ["claude_notebook", "jupyter_ext"]
include-package-data = true

[tool.setuptools.package-data]
jupyter_ext = []  # 모듈 자체만
claude_notebook = []

# static/ 와 images/ 는 패키지 외부지만 install 시 같이 가야 함
[tool.setuptools.data-files]
"share/claude-notebook/static" = ["static/**/*"]
"share/claude-notebook/images" = ["images/**/*"]
